# Laptop_Inventory_CLI

./: .gitignore  Cargo.toml  README.md
migrations/: 20250101_create_laptops.sql  20250102_create_users.sql
src/: databases.rs  error.rs  main.rs  models.rs
src/handlers/: laptops.rs  mod.rs  users.rs
